# hypertype-svn

tags/release-0.2/: CapitalizeLines.pl  extract_book_phrases.pl  extract_words.pl  hypertype.kdevelop
tags/release-0.2/src/: Makefile.am  OS.cpp  OS.h  SDL_aid.h  array_aid.cpp  array_aid.h  file_aid.cpp  file_aid.h  game.h  globals.h  hypertype.cpp  lesson.cpp  menu.h  message_box.h  precompiled.h  screen.cpp  screen.h  text_generation.cpp  text_generation.h  widget.cpp  widget_accuracy.h  widget_button.h  widget_completion.h  widget_display.cpp  widget_image.h  widget_keyboard.h  widget_newkeys.cpp  widget_practice.cpp  widget_practice.h  widget_settings.h  widget_settings_file.cpp  widget_settings_file.h  widget_speed.cpp  widget_text.cpp  xml_aid.h
tags/release-0.2/src/aggregator/: aggregator_engine.cpp  aggregator_engine.h  file_aid.cpp  grid.h  time_aid.cpp  time_aid.h  total_aid.h  typing_history_aggregator.cpp  typing_history_aggregator.h  wxaggregator.h
tags/release-0.2/src/data/: Makefile.am  hypertype.desktop
tags/release-0.2/src/data/fonts/: Makefile.am
tags/release-0.2/src/data/lesson_data/: AllNumberPhrases.txt  CommonKeys_Game.xml  CommonKeys_Practice.xml  GameWordsCommonKeys.txt  HomeRowWords.txt  HomeRow_Lessons.xml  HomeRow_Practice.xml  Makefile.am  ModifierKeys_Lessons.xml  Numbers_Game.xml  OtherSymbols_Game.xml  OtherSymbols_Lessons.xml  PhrasesCommonKeysWithAllCaps.txt  PhrasesHomeRowPlusCommonKeys.txt  RemainingLetters_Lessons.xml  TopRowSymbols_Game.xml  WordsCommonKeysWithERTCaps.txt  WordsCommonKeysWithNMCaps.txt  WordsCommonKeysWithUIOPCaps.txt  WordsCumPlusRemainingCaps.txt  WordsCumPlusYBQWZXCV.txt  newkey_descs.txt
tags/release-0.2/src/data/lesson_data/books/: Makefile.am  The Cop And The Anthem.xml  The Last Leaf.xml  Two Gentlemen.txt
tags/release-0.2/src/data/screens/: Book_display.xml  CommonKeysGameIntro.xml  CommonKeysPracticeIntro.xml  HomeRowIntro.xml  Makefile.am  MessageScreen.xml  NewKeys_display.xml  NewKeys_widgets.xml  Practice_display.xml  Practice_display_with_WPM.xml  TopRowSymbolsIntro.xml  about.xml  game.xml  lesson_menu.xml  message_box.xml
tags/release-0.2/src/data/source_data/: Makefile.am  RansomOfRedChief.txt  TreasureIsland.txt
tags/release-0.2/src/data/source_data/books_source/: Makefile.am  The_Cop_And_The_Anthem.txt
tags/release-0.2/templates/: cpp
trunk/: Doxyfile  GenerateWordAndPhraseLessons.sh  Makefile.am  aclocal.m4  aggregator.spec  build_packages.sh  configure.in  generate_game_symbols.pl  hypertype.kdevelop.pcs  hypertype.kdevses  hypertype.spec  master.txt
trunk/src/: OS.cpp  OS.h  SDL_aid.cpp  SDL_aid.h  fix_months.pl  font_aid.cpp  font_aid.h  game.cpp  globals.cpp  globals.h  hypertype.cpp  image_aid.cpp  image_aid.h  lesson.cpp  lesson.h  menu.cpp  message_box.cpp  screen.cpp  string_aid.cpp  string_aid.h  widget.h  widget_accuracy.cpp  widget_button.cpp  widget_completion.cpp  widget_display.cpp  widget_display.h  widget_image.cpp  widget_keyboard.cpp  widget_lesson_progress.cpp  widget_lesson_progress.h  widget_newkeys.h  widget_settings.cpp  widget_settings.h  widget_settings_file.cpp  widget_settings_file.h  widget_speed.h  widget_text.h
trunk/src/aggregator/: Makefile.am  aggregator_engine.cpp  grid.cpp  grid_wx.cpp  grid_wx.h  string_aid.cpp  total_aid.cpp  typing_history_aggregator.cpp  widget_settings.cpp  wxaggregator.cpp
trunk/src/data/: Makefile.am  hypertype.desktop
trunk/src/data/images/: Makefile.am
trunk/src/data/lesson_data/: BookAfterTwentyYears.txt  BookRansomOfRedChief.txt  BookTheCopAndTheAnthem.txt  Book_AfterTwentyYears.xml  Book_RansomOfRedChief.xml  Book_TheCopAndTheAnthem.xml  CommonKeys_Lessons.xml  CommonKeys_Practice.xml  GameWordsModifierKeys.txt  GameWordsOtherSymbols.txt  GameWordsRemainingLetters.txt  GameWordsTopRowSymbols.txt  HomePlusERTUIOPWords.txt  HomePlusERTWords.txt  HomeRowPlusCommonKeysWords.txt  HomeRow_Lessons.xml  HomeRow_Practice.xml  Makefile.am  ModifierKeys_Game.xml  ModifierKeys_Lessons.xml  ModifierKeys_Practice.xml  Numbers_Lessons.xml  Numbers_Practice.xml  OtherSymbols_Lessons.xml  OtherSymbols_Practice.xml  PhrasesAllLetters_TreasureIsland.txt  PhrasesAllLetters_WotW.txt  PhrasesHomeRowPlusERTUIOP.txt  PhrasesOtherSymbols.txt  RemainingLetters_Game.xml  RemainingLetters_Lessons.xml  RemainingLetters_Practice.xml  TopRowSymbolPhrases.txt  TopRowSymbols_Lessons.xml  TopRowSymbols_Practice.xml  WordsCommonKeysWithASDFGCaps.txt  WordsCommonKeysWithAllCaps.txt  WordsCommonKeysWithHJKLCaps.txt  WordsCumPlusQW.txt  WordsCumPlusYB.txt  (+3 more)
trunk/src/data/lesson_data/books/: After Twenty Years.txt  After Twenty Years.xml  Makefile.am  Ransom Of Red Chief.txt  Ransom Of Red Chief.xml  The Cop And The Anthem.txt  The Cop And The Anthem.xml  The Last Leaf.txt  The Last Leaf.xml  Two Gentlemen.xml
trunk/src/data/screens/: CommonKeysIntro.xml  HomeRowPracticeIntro.xml  Keyboard_widget.xml  ModifierKeysIntro.xml  NumberKeysIntro.xml  OtherSymbolsIntro.xml  PracticeLessonsIntro.xml  Practice_display_no_keyboard.xml  Practice_widgets.xml  ProblemKeys_display.xml  RemainingKeysIntro.xml  SidebarCommon.xml  Speed_Sidebar.xml  main.xml  practice_menu.xml
trunk/src/data/source_data/: AmusementsInMathematics.txt  BookTemplate.xml  GenerateBooks.py  Makefile.am  MenuTemplate.xml  NumberPhrases.txt  SymbolPhrases.txt  TopRowSymbolPhrases.txt  WarOfTheWorlds.txt
trunk/src/data/source_data/books/: BookTemplate.xml  GenerateBooks.py
trunk/src/data/source_data/books/source/: After Twenty Years.txt  The Last Leaf.txt
trunk/src/data/source_data/books_source/: Two_Gentlemen.txt
