INCLUDES = $(all_includes)
METASOURCES = AUTO
imagesdir = $(pkgdatadir)/images
images_DATA = background.png btn_down.png btn_down_med.png btn_down_small.png \
		btn_down_wide.png btn_small_down.png btn_small_up.png btn_up.png btn_up_med.png \
		btn_up_small.png btn_up_wide.png city-blue.png city-dead.png cityex1.png cityex2.png \
		cityex3.png cityex4.png cityex5.png comet1.png comet2.png comet3.png cometex1.png \
		cometex2.png game_background.png 	keyboard1.png keyboard10.png keyboard11.png \
	keyboard12.png keyboard13.png 	keyboard14.png keyboard15.png keyboard16.png \
	keyboard17.png keyboard18.png 	keyboard19.png keyboard2.png keyboard20.png \
	keyboard21.png keyboard22.png 	keyboard23.png keyboard24.png keyboard25.png \
	keyboard26.png keyboard27.png 	keyboard28.png keyboard29.png keyboard3.png \
	keyboard30.png keyboard31.png 	keyboard32.png keyboard33.png keyboard34.png \
	keyboard35.png keyboard36.png 	keyboard37.png keyboard38.png keyboard39.png \
	keyboard4.png keyboard40.png 	keyboard41.png keyboard42.png keyboard43.png \
	keyboard44.png keyboard45.png 	keyboard46.png keyboard47.png keyboard48.png \
	keyboard49.png keyboard5.png 	keyboard50.png keyboard51.png keyboard52.png \
	keyboard53.png keyboard54.png 	keyboard55.png keyboard56.png keyboard57.png \
	keyboard58.png keyboard59.png 	keyboard6.png keyboard60.png keyboard61.png \
	keyboard62.png keyboard63.png 	keyboard64.png keyboard65.png keyboard66.png \
	keyboard67.png keyboard68.png 	keyboard69.png keyboard7.png keyboard70.png \
	keyboard71.png keyboard72.png 	keyboard73.png keyboard74.png keyboard75.png \
	keyboard76.png keyboard77.png 	keyboard78.png keyboard79.png keyboard8.png \
	keyboard80.png keyboard81.png 	keyboard82.png keyboard83.png keyboard84.png \
	keyboard85.png keyboard86.png 	keyboard87.png keyboard88.png keyboard89.png \
	keyboard9.png keyboard90.png 	keyboard91.png keyboard92.png keyboard93.png \
	keyboard94.png keyboard95.png 	keyboard96.png message_box.png practice_lesson_bkg.png

EXTRA_DIST = $(images_DATA)