INCLUDES = $(all_includes)
METASOURCES = AUTO
lesson_datadir = $(pkgdatadir)/lesson_data
lesson_data_DATA = AllNumberPhrases.txt clear_lessons.xml CommonKeys_Game.xml \
	CommonKeys_Lessons.xml CommonKeys_Practice.xml GameWordsCommonKeys.txt \
	GameWordsModifierKeys.txt GameWordsNumberKeys.txt GameWordsRemainingLetters.txt \
	GameWordsTopRowSymbols.txt HomePlusERTUIOPWords.txt HomePlusERTWords.txt HomeRow_Lessons.xml \
	HomeRow_Practice.xml HomeRowPlusCommonKeysWords.txt HomeRowWords.txt ModifierKeys_Game.xml \
	ModifierKeys_Lessons.xml ModifierKeys_Practice.xml newkey_descs.txt Numbers_Game.xml \
	Numbers_Lessons.xml Numbers_Practice.xml OtherSymbols_Lessons.xml \
	PhrasesAllLetters_TreasureIsland.txt PhrasesAllLetters_WotW.txt PhrasesCommonKeysWithAllCaps.txt \
	PhrasesHomeRowPlusCommonKeys.txt PhrasesHomeRowPlusERTUIOP.txt PhrasesOtherSymbols.txt \
	RemainingLetters_Game.xml RemainingLetters_Lessons.xml RemainingLetters_Practice.xml \
	TopRowSymbolPhrases.txt TopRowSymbols_Game.xml TopRowSymbols_Lessons.xml \
	TopRowSymbols_Practice.xml WordsCommonKeysWithAllCaps.txt WordsCommonKeysWithASDFGCaps.txt \
	WordsCommonKeysWithERTCaps.txt WordsCommonKeysWithHJKLCaps.txt WordsCommonKeysWithNMCaps.txt \
	WordsCommonKeysWithUIOPCaps.txt WordsCumPlusQW.txt WordsCumPlusRemainingCaps.txt WordsCumPlusYB.txt \
	WordsCumPlusYBQWZXCV.txt WordsCumPlusZXCV.txt OtherSymbols_Game.xml OtherSymbols_Practice.xml \
	GameWordsOtherSymbols.txt

EXTRA_DIST = $(lesson_data_DATA)
SUBDIRS = books
