INCLUDES = $(all_includes)
METASOURCES = AUTO
screensdir = $(pkgdatadir)/screens
screens_DATA = about.xml Book_display.xml CommonKeysGameIntro.xml \
	CommonKeysIntro.xml CommonKeysPracticeIntro.xml game.xml HomeRowIntro.xml \
	HomeRowPracticeIntro.xml Keyboard_widget.xml lesson_menu.xml main.xml message_box.xml \
	MessageScreen.xml ModifierKeysIntro.xml NewKeys_display.xml NewKeys_widgets.xml \
	NumberKeysIntro.xml OtherSymbolsIntro.xml Practice_display.xml \
	Practice_display_no_keyboard.xml Practice_display_with_WPM.xml practice_menu.xml Practice_widgets.xml \
	PracticeLessonsIntro.xml ProblemKeys_display.xml RemainingKeysIntro.xml SidebarCommon.xml \
	Speed_Sidebar.xml TopRowSymbolsIntro.xml

EXTRA_DIST = $(screens_DATA)